--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "music-metadata": "^8.1.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
