--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "music-metadata": "^8.1.0",
-    "next": "13.0.0",
+    "@supabase/supabase-js": "^2.0.4",
+    "next": "12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "@types/styled-components": "^5.1.26",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "music-metadata": "^8.1.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
 }
