--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
+    "react-supabase": "^0.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
