--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@supabase/supabase-js": "^2.0.4",
     "music-metadata": "^8.1.0",
-    "next": "12",
+    "next": "^13.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
-    "react-supabase": "^0.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
@@ -27,11 +26,8 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "@types/styled-components": "^5.1.26",
-    "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
-    "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
 }
