--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@portabletext/react": "^2.0.0",
+    "@sanity/image-url": "^1.0.1",
     "@supabase/supabase-js": "^2.0.4",
     "music-metadata": "^8.1.0",
     "next": "^13.0.1",
+    "next-sanity": "^1.0.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
