--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
+    "sanity": "3.0.0-rc.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
